--- a/sites/all/themes/slac/scss/components/_cards.scss
+++ b/sites/all/themes/slac/scss/components/_cards.scss
@@ -5,11 +5,13 @@
 
 .card-deck .card {
   @media only screen and (max-width: 768px) and (min-width: 576px) {
+    /* margin-bottom: 15px; */
+    /* flex: 0 0 29.333333%; */
     margin-bottom: 15px;
-    flex: 0 0 29.333333%;
-    margin-bottom: 15px;
-    margin-right: 2%;
-    margin-left: 2%;
+    /* margin-right: 2%; */
+    /* margin-left: 2%; */
+    min-width: 21.8rem;
+    max-width: 21.8rem;
   }
 }
 
@@ -19,5 +21,12 @@
     margin-right: 15px;
     margin-bottom: 0;
     margin-left: 15px;
+    margin: 0 auto;
+  }
+}
+
+.card-deck {
+  @media (min-width: 576px) {
+    margin: 0 auto;
   }
 }
